<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <ImageView
        android:id="@+id/icon1"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:contentDescription="@string/icon1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/icon2"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/nigeriaflagxs" />

    <ImageView
        android:id="@+id/icon2"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:contentDescription="@string/icon2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/icon3"
        app:layout_constraintStart_toEndOf="@+id/icon1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/icons8android48" />

    <ImageView
        android:id="@+id/icon3"
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:contentDescription="@string/icon3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/icon4"
        app:layout_constraintStart_toEndOf="@+id/icon2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/icons8androidos50" />

    <ImageView
        android:id="@+id/icon4"
        android:layout_width="47dp"
        android:layout_height="39dp"
        android:contentDescription="@string/icon4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/authorface" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:text="@string/full_name_joshua_monyei_nslack_id_kylo_ren_nemail_monyeijosh01_gmail_com"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon4"
        app:layout_constraintVertical_bias="0.047" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="409dp"
        android:layout_height="317dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.255" />

    <ImageView
        android:id="@+id/icon5"
        android:layout_width="79dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/icon6"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_view"
        app:layout_constraintVertical_bias="0.721"
        app:srcCompat="@drawable/icons8playstore64"
        android:contentDescription="@string/icon5" />

    <ImageView
        android:id="@+id/icon6"
        android:layout_width="97dp"
        android:layout_height="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/icon7"
        app:layout_constraintStart_toEndOf="@+id/icon5"
        app:layout_constraintTop_toBottomOf="@+id/list_view"
        app:layout_constraintVertical_bias="0.754"
        app:srcCompat="@drawable/icons8android50"
        android:contentDescription="@string/icon6" />

    <ImageView
        android:id="@+id/icon7"
        android:layout_width="87dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon6"
        app:layout_constraintTop_toBottomOf="@+id/list_view"
        app:layout_constraintVertical_bias="0.717"
        app:srcCompat="@drawable/icons8dolphinemulator64"
        android:contentDescription="@string/icon7" />


</androidx.constraintlayout.widget.ConstraintLayout>
